force-app/main/default/objects/Age__c/Age__c.object-meta.xml
<CustomObject>
    <label>Age</label>
    <nameField>
        <displayFormat>Age-{00}</displayFormat>
        <label>#Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>