force-app/main/default/objects/Age__c/fields/Age_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Years__c</fullName>
    <formula>FLOOR((TODAY() -  DOB__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>