force-app/main/default/objects/Age__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DOB__c</columns>
    <columns>Age_in_Years__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>